--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "sideEffects": false,
   "version": "1.0.0",
   "scripts": {
-    "dev": "shopify hydrogen dev --worker --port 8080",
+    "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
-    "preview": "npm run build && shopify hydrogen preview --worker",
+    "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx,.d.ts .",
     "format": "prettier --write --ignore-unknown .",
     "format:check": "prettier --check --ignore-unknown .",
@@ -23,12 +23,12 @@
     "@pack/client": "^0.0.7",
     "@pack/hydrogen": "^0.1.0",
     "@pack/react": "^0.1.0",
-    "@remix-run/react": "^2.3.1",
-    "@shopify/cli": "^3.52.0",
-    "@shopify/cli-hydrogen": "^6.1.0",
-    "@shopify/hydrogen": "~2023.10.3",
-    "@shopify/hydrogen-react": "^2023.10.1",
-    "@shopify/remix-oxygen": "^2.0.2",
+    "@remix-run/react": "^2.8.1",
+    "@shopify/cli": "^3.57.0",
+    "@shopify/cli-hydrogen": "^7.1.1",
+    "@shopify/hydrogen": "^2024.1.3",
+    "@shopify/hydrogen-react": "^2024.1.1",
+    "@shopify/remix-oxygen": "^2.0.3",
     "country-region-data": "^3.0.0",
     "crypto-js": "^4.2.0",
     "eventemitter3": "^5.0.1",
