--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.1.3",
+  "version": "1.2.0",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
@@ -26,7 +26,7 @@
     "@remix-run/react": "^2.8.1",
     "@shopify/cli": "^3.57.0",
     "@shopify/cli-hydrogen": "^7.1.1",
-    "@shopify/hydrogen": "^2024.1.3",
+    "@shopify/hydrogen": "^2024.1.6",
     "@shopify/hydrogen-react": "^2024.1.1",
     "@shopify/remix-oxygen": "^2.0.3",
     "country-region-data": "^3.0.0",
@@ -47,8 +47,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.3.1",
-    "@remix-run/eslint-config": "2.1.0",
+    "@remix-run/dev": "^2.8.1",
+    "@remix-run/eslint-config": "^2.8.1",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^4.0.0",
     "@shopify/prettier-config": "^1.1.2",
