--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.2.0",
+  "version": "1.3.0",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
@@ -18,38 +18,39 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
     "@pack/client": "^0.0.7",
     "@pack/hydrogen": "^0.1.2",
-    "@pack/react": "^0.1.0",
-    "@remix-run/react": "^2.8.1",
-    "@shopify/cli": "^3.57.0",
-    "@shopify/cli-hydrogen": "^7.1.1",
-    "@shopify/hydrogen": "^2024.1.6",
-    "@shopify/hydrogen-react": "^2024.1.1",
-    "@shopify/remix-oxygen": "^2.0.3",
+    "@pack/react": "^0.1.1",
+    "@remix-run/react": "^2.9.1",
+    "@shopify/cli": "^3.59.2",
+    "@shopify/cli-hydrogen": "^8.0.3",
+    "@shopify/hydrogen": "^2024.4.1",
+    "@shopify/hydrogen-react": "^2024.4.1",
+    "@shopify/mini-oxygen": "^3.0.1",
+    "@shopify/remix-oxygen": "^2.0.4",
     "country-region-data": "^3.0.0",
     "crypto-js": "^4.2.0",
     "eventemitter3": "^5.0.1",
-    "graphql": "^16.6.0",
-    "isbot": "^3.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.3",
+    "graphql": "^16.8.1",
+    "isbot": "^3.8.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.10.1",
     "react-markdown": "^9.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "schema-dts": "^1.1.2",
-    "snakecase-keys": "^6.0.0",
-    "swiper": "^11.0.7",
-    "tiny-invariant": "^1.2.0",
+    "snakecase-keys": "^8.0.0",
+    "swiper": "^11.1.1",
+    "tiny-invariant": "^1.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.8.1",
-    "@remix-run/eslint-config": "^2.8.1",
-    "@shopify/eslint-plugin": "^42.0.1",
+    "@remix-run/dev": "^2.9.1",
+    "@remix-run/eslint-config": "^2.9.1",
+    "@shopify/eslint-plugin": "^44.0.0",
     "@shopify/oxygen-workers-types": "^4.0.0",
     "@shopify/prettier-config": "^1.1.2",
     "@types/eslint": "^8.4.10",
@@ -60,7 +61,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-hydrogen": "0.12.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^4.2.1",
