--- a/package.json
+++ b/package.json
@@ -61,17 +61,18 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.56.0",
     "eslint-plugin-hydrogen": "0.12.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "jest": "^29.7.0",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.2.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier": "^3.2.5",
     "shopify-gid": "^1.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2"
