--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^5.62.0",
+    "cookie-parser": "^1.4.6",
     "eslint": "^8.56.0",
     "eslint-plugin-hydrogen": "0.12.3",
     "eslint-plugin-import": "^2.29.0",
