--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^5.62.0",
     "cookie-parser": "^1.4.6",
-    "eslint": "^8.56.0",
+    "eslint": "8.57.0",
     "eslint-plugin-hydrogen": "0.12.3",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "jest": "^29.7.0",
