--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.8.0",
+  "version": "1.8.1",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
@@ -18,7 +18,7 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^2.1.3",
+    "@headlessui/react": "2.1.2",
     "@headlessui/tailwindcss": "^0.2.1",
     "@pack/client": "^1.0.1",
     "@pack/hydrogen": "^1.0.5",
