--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.8.1",
+  "version": "1.8.2",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
@@ -23,13 +23,13 @@
     "@pack/client": "^1.0.1",
     "@pack/hydrogen": "^1.0.5",
     "@pack/react": "^0.1.4",
-    "@remix-run/react": "^2.11.2",
+    "@remix-run/react": "^2.12.0",
     "@shopify/cli": "^3.66.1",
-    "@shopify/cli-hydrogen": "^8.4.1",
-    "@shopify/hydrogen": "^2024.7.4",
-    "@shopify/hydrogen-react": "^2024.7.2",
-    "@shopify/mini-oxygen": "^3.0.4",
-    "@shopify/remix-oxygen": "^2.0.6",
+    "@shopify/cli-hydrogen": "^8.4.3",
+    "@shopify/hydrogen": "^2024.7.6",
+    "@shopify/hydrogen-react": "^2024.7.4",
+    "@shopify/mini-oxygen": "^3.0.5",
+    "@shopify/remix-oxygen": "^2.0.7",
     "country-region-data": "^3.0.0",
     "crypto-js": "^4.2.0",
     "graphql": "^16.9.0",
@@ -37,13 +37,13 @@
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.13.0",
+    "react-intersection-observer": "^9.13.1",
     "react-markdown": "^9.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "schema-dts": "^1.1.2",
     "snakecase-keys": "^8.0.1",
-    "swiper": "^11.1.11",
+    "swiper": "^11.1.14",
     "tiny-invariant": "^1.3.3",
     "uuid": "^10.0.0"
   },
@@ -57,25 +57,25 @@
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
     "@types/lodash": "^4.17.7",
-    "@types/node": "^22.5.1",
-    "@types/react": "^18.3.5",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "^0.6.0",
     "eslint": "8.57.0",
-    "eslint-plugin-hydrogen": "^0.12.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-hydrogen": "0.12.3",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-tailwindcss": "3.17.4",
     "jest": "^29.7.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
     "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.0.2",
+    "postcss-preset-env": "^10.0.3",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": ">=18.0.0"
