chore: latest package updates

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.9.1",
+  "version": "1.9.2",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
@@ -18,17 +18,17 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "2.1.2",
+    "@headlessui/react": "^2.1.9",
     "@headlessui/tailwindcss": "^0.2.1",
     "@pack/client": "^1.0.1",
     "@pack/hydrogen": "^1.0.5",
     "@pack/react": "^0.1.4",
     "@remix-run/react": "^2.12.1",
-    "@shopify/cli": "^3.67.2",
-    "@shopify/cli-hydrogen": "^8.4.4",
+    "@shopify/cli": "^3.68.0",
+    "@shopify/cli-hydrogen": "^8.4.5",
     "@shopify/hydrogen": "^2024.7.8",
     "@shopify/hydrogen-react": "^2024.7.5",
-    "@shopify/mini-oxygen": "^3.0.5",
+    "@shopify/mini-oxygen": "^3.0.6",
     "@shopify/remix-oxygen": "^2.0.8",
     "country-region-data": "^3.0.0",
     "crypto-js": "^4.2.0",
@@ -48,21 +48,21 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.11.2",
-    "@remix-run/eslint-config": "^2.11.2",
+    "@remix-run/dev": "^2.12.1",
+    "@remix-run/eslint-config": "^2.12.1",
     "@shopify/eslint-plugin": "^46.0.0",
     "@shopify/oxygen-workers-types": "^4.1.4",
     "@shopify/prettier-config": "^1.1.2",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.7",
+    "@types/lodash": "^4.17.10",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
-    "cookie": "^0.6.0",
+    "cookie": "^0.7.0",
     "eslint": "8.57.0",
     "eslint-plugin-hydrogen": "0.12.3",
     "eslint-plugin-import": "2.29.1",
@@ -72,9 +72,9 @@
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.0.3",
+    "postcss-preset-env": "^10.0.5",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   },
   "engines": {
