feat: updated sitemap and products feed xml

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@shopify/remix-oxygen": "^2.0.9",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
+    "fast-xml-parser": "^4.5.0",
     "graphql": "^16.9.0",
     "isbot": "^5.1.6",
     "markdown-to-jsx": "^7.4.7",
