--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.9.7",
+  "version": "1.10.0",
+  "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
     "build": "shopify hydrogen build",
@@ -18,20 +19,21 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^2.1.10",
+    "@headlessui/react": "^2.2.0",
     "@headlessui/tailwindcss": "^0.2.1",
     "@pack/client": "^1.0.1",
-    "@pack/hydrogen": "^1.0.5",
+    "@pack/hydrogen": "^1.0.6",
     "@pack/react": "^0.1.4",
-    "@remix-run/react": "^2.13.1",
-    "@shopify/cli": "^3.68.1",
-    "@shopify/cli-hydrogen": "^8.4.6",
-    "@shopify/hydrogen": "^2024.7.9",
-    "@shopify/hydrogen-react": "^2024.7.6",
-    "@shopify/mini-oxygen": "^3.0.6",
-    "@shopify/remix-oxygen": "^2.0.8",
-    "country-region-data": "^3.0.0",
+    "@remix-run/react": "^2.15.0",
+    "@shopify/cli": "^3.71.4",
+    "@shopify/cli-hydrogen": "^9.0.2",
+    "@shopify/hydrogen": "^2024.10.0",
+    "@shopify/hydrogen-react": "^2024.10.0",
+    "@shopify/mini-oxygen": "^3.1.0",
+    "@shopify/remix-oxygen": "^2.0.9",
+    "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
+    "fast-xml-parser": "^4.5.0",
     "graphql": "^16.9.0",
     "isbot": "^5.1.6",
     "markdown-to-jsx": "^7.4.7",
@@ -43,23 +45,26 @@
     "remark-gfm": "^4.0.0",
     "schema-dts": "^1.1.2",
     "snakecase-keys": "^8.0.1",
-    "swiper": "^11.1.14",
+    "swiper": "^11.1.15",
     "tiny-invariant": "^1.3.3",
-    "uuid": "^10.0.0"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.12.1",
-    "@remix-run/eslint-config": "^2.12.1",
+    "@graphql-codegen/cli": "^5.0.3",
+    "@remix-run/dev": "^2.15.0",
+    "@remix-run/eslint-config": "^2.15.0",
+    "@remix-run/node": "^2.15.0",
     "@shopify/eslint-plugin": "^46.0.0",
-    "@shopify/oxygen-workers-types": "^4.1.4",
+    "@shopify/hydrogen-codegen": "^0.3.2",
+    "@shopify/oxygen-workers-types": "^4.1.6",
     "@shopify/prettier-config": "^1.1.2",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
-    "@types/lodash": "^4.17.11",
-    "@types/node": "^22.7.6",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.10.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "0.7.2",
@@ -70,12 +75,14 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-tailwindcss": "3.17.4",
     "jest": "^29.7.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.0.7",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "postcss-preset-env": "^10.1.1",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2",
+    "vite": "5.4.11",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
