--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@headlessui/react": "^2.1.10",
     "@headlessui/tailwindcss": "^0.2.1",
     "@pack/client": "^1.0.1",
-    "@pack/hydrogen": "^1.0.6-ab-test.3",
-    "@pack/react": "^0.1.4-ab-test.0",
+    "@pack/hydrogen": "file:.yalc/@pack/hydrogen",
+    "@pack/react": "file:.yalc/@pack/react",
     "@remix-run/react": "^2.13.1",
     "@shopify/cli": "^3.68.1",
     "@shopify/cli-hydrogen": "^8.4.6",
