--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.10.0",
+  "version": "1.10.1",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -24,22 +24,22 @@
     "@pack/client": "^1.0.1",
     "@pack/hydrogen": "^1.0.6",
     "@pack/react": "^0.1.4",
-    "@remix-run/react": "^2.15.0",
-    "@shopify/cli": "^3.71.4",
-    "@shopify/cli-hydrogen": "^9.0.2",
-    "@shopify/hydrogen": "^2024.10.0",
-    "@shopify/hydrogen-react": "^2024.10.0",
+    "@remix-run/react": "^2.15.2",
+    "@shopify/cli": "^3.72.2",
+    "@shopify/cli-hydrogen": "^9.0.3",
+    "@shopify/hydrogen": "^2024.10.1",
+    "@shopify/hydrogen-react": "^2024.10.1",
     "@shopify/mini-oxygen": "^3.1.0",
     "@shopify/remix-oxygen": "^2.0.9",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "fast-xml-parser": "^4.5.0",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
     "isbot": "^5.1.6",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.13.1",
+    "react-intersection-observer": "^9.14.0",
     "react-markdown": "^9.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
@@ -51,9 +51,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
-    "@remix-run/dev": "^2.15.0",
-    "@remix-run/eslint-config": "^2.15.0",
-    "@remix-run/node": "^2.15.0",
+    "@remix-run/dev": "^2.15.2",
+    "@remix-run/eslint-config": "^2.15.2",
+    "@remix-run/node": "^2.15.2",
     "@shopify/eslint-plugin": "^46.0.0",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
@@ -62,9 +62,9 @@
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^22.10.1",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "0.7.2",
@@ -73,16 +73,17 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-refresh": "0.4.16",
     "eslint-plugin-tailwindcss": "3.17.4",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.1",
+    "postcss-preset-env": "^10.1.3",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite": "5.4.11",
-    "vite-tsconfig-paths": "^4.3.1"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
     "node": ">=18.0.0"
