--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@headlessui/tailwindcss": "^0.2.1",
-    "@pack/client": "^1.0.1",
-    "@pack/hydrogen": "^1.0.6",
+    "@pack/client": "file:.yalc/@pack/client",
+    "@pack/hydrogen": "file:.yalc/@pack/hydrogen",
+    "@pack/packlytics": "file:.yalc/@pack/packlytics",
     "@pack/react": "^0.1.4",
-    "@remix-run/react": "^2.15.2",
-    "@shopify/cli": "^3.72.2",
+    "@remix-run/react": "^2.15.3",
+    "@shopify/cli": "^3.75.3",
     "@shopify/cli-hydrogen": "^9.0.3",
-    "@shopify/hydrogen": "^2024.10.1",
+    "@shopify/hydrogen": "^2025.1.1",
     "@shopify/hydrogen-react": "^2024.10.1",
-    "@shopify/mini-oxygen": "^3.1.0",
-    "@shopify/remix-oxygen": "^2.0.9",
+    "@shopify/mini-oxygen": "^3.1.1",
+    "@shopify/remix-oxygen": "^2.0.10",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "fast-xml-parser": "^4.5.0",
@@ -51,9 +52,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
-    "@remix-run/dev": "^2.15.2",
-    "@remix-run/eslint-config": "^2.15.2",
-    "@remix-run/node": "^2.15.2",
+    "@remix-run/dev": "^2.15.3",
+    "@remix-run/eslint-config": "^2.15.3",
+    "@remix-run/node": "^2.15.3",
     "@shopify/eslint-plugin": "^46.0.0",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
