--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.10.2",
+  "version": "1.11.0",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -20,7 +20,7 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@headlessui/tailwindcss": "^0.2.1",
+    "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.2",
     "@pack/hydrogen": "^1.0.8",
     "@pack/react": "^2.1.4",
@@ -40,18 +40,18 @@
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.14.0",
-    "react-markdown": "^9.0.1",
+    "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^10.0.0",
     "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "schema-dts": "^1.1.2",
     "snakecase-keys": "^8.0.1",
-    "swiper": "^11.1.15",
+    "swiper": "^11.2.4",
     "tiny-invariant": "^1.3.3",
-    "uuid": "^11.0.3"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/cli": "^5.0.5",
     "@remix-run/dev": "^2.15.3",
     "@remix-run/eslint-config": "^2.15.3",
     "@remix-run/node": "^2.15.3",
@@ -62,10 +62,10 @@
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "0.7.2",
@@ -77,11 +77,11 @@
     "eslint-plugin-react-refresh": "0.4.16",
     "eslint-plugin-tailwindcss": "3.17.4",
     "jest": "^29.7.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.3",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17",
+    "postcss-preset-env": "^10.1.4",
+    "prettier": "^3.5.1",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.7.2",
     "vite": "5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
@@ -90,3 +90,4 @@
     "node": ">=18.0.0"
   }
 }
+
