--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "crypto-js": "^4.2.0",
     "fast-xml-parser": "^4.5.0",
     "graphql": "^16.10.0",
+    "hex-to-rgba": "^2.0.1",
     "isbot": "^5.1.6",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
