--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@pack/hydrogen": "^1.0.8",
     "@pack/react": "^2.1.4",
     "@pack/types": "^0.0.2",
-    "@remix-run/react": "^2.15.3",
-    "@shopify/cli": "^3.75.4",
-    "@shopify/cli-hydrogen": "^9.0.8",
-    "@shopify/hydrogen": "^2025.1.2",
-    "@shopify/hydrogen-react": "^2025.1.2",
-    "@shopify/mini-oxygen": "^3.1.1",
-    "@shopify/remix-oxygen": "^2.0.11",
+    "@remix-run/react": "^2.16.4",
+    "@shopify/cli": "^3.77.1",
+    "@shopify/cli-hydrogen": "9.0.8",
+    "@shopify/hydrogen": "^2025.1.3",
+    "@shopify/hydrogen-react": "^2025.1.3",
+    "@shopify/mini-oxygen": "3.1.1",
+    "@shopify/remix-oxygen": "^2.0.12",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "fast-xml-parser": "^4.5.0",
@@ -54,13 +54,13 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
-    "@remix-run/dev": "^2.15.3",
-    "@remix-run/eslint-config": "^2.15.3",
-    "@remix-run/node": "^2.15.3",
-    "@shopify/eslint-plugin": "^47.0.1",
+    "@remix-run/dev": "^2.16.4",
+    "@remix-run/eslint-config": "^2.16.4",
+    "@remix-run/node": "^2.16.4",
+    "@shopify/eslint-plugin": "^48.0.2",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
-    "@shopify/prettier-config": "^1.1.2",
+    "@shopify/prettier-config": "^1.1.4",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
