--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql": "^16.10.0",
     "hex-to-rgba": "^2.0.1",
     "isbot": "^5.1.6",
+    "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
