--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.12.3",
+  "version": "1.12.4",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -26,65 +26,66 @@
     "@pack/hydrogen": "^1.0.8",
     "@pack/react": "^2.1.4",
     "@pack/types": "^0.0.2",
-    "@remix-run/react": "^2.15.3",
-    "@shopify/cli": "^3.75.4",
-    "@shopify/cli-hydrogen": "^9.0.8",
-    "@shopify/hydrogen": "^2025.1.2",
-    "@shopify/hydrogen-react": "^2025.1.2",
-    "@shopify/mini-oxygen": "^3.1.1",
-    "@shopify/remix-oxygen": "^2.0.11",
+    "@remix-run/react": "^2.16.4",
+    "@shopify/cli": "^3.77.1",
+    "@shopify/cli-hydrogen": "9.0.8",
+    "@shopify/hydrogen": "^2025.1.3",
+    "@shopify/hydrogen-react": "^2025.1.3",
+    "@shopify/mini-oxygen": "3.1.1",
+    "@shopify/remix-oxygen": "^2.0.12",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "fast-xml-parser": "^4.5.0",
     "graphql": "^16.10.0",
     "hex-to-rgba": "^2.0.1",
     "isbot": "^5.1.6",
+    "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.15.1",
-    "react-markdown": "^10.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
-    "schema-dts": "^1.1.2",
+    "schema-dts": "^1.1.5",
     "snakecase-keys": "^8.0.1",
-    "swiper": "^11.2.4",
+    "swiper": "^11.2.6",
     "tiny-invariant": "^1.3.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
-    "@remix-run/dev": "^2.15.3",
-    "@remix-run/eslint-config": "^2.15.3",
-    "@remix-run/node": "^2.15.3",
-    "@shopify/eslint-plugin": "^47.0.1",
+    "@remix-run/dev": "^2.16.4",
+    "@remix-run/eslint-config": "^2.16.4",
+    "@remix-run/node": "^2.16.4",
+    "@shopify/eslint-plugin": "^48.0.2",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
-    "@shopify/prettier-config": "^1.1.2",
+    "@shopify/prettier-config": "^1.1.4",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
-    "@types/lodash": "^4.17.15",
-    "@types/node": "^22.13.4",
-    "@types/react": "^19.0.10",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "0.7.2",
-    "eslint": "8.57.0",
-    "eslint-plugin-hydrogen": "0.12.3",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-refresh": "0.4.16",
-    "eslint-plugin-tailwindcss": "3.17.4",
+    "eslint": "8.57.1",
+    "eslint-plugin-hydrogen": "0.12.5",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.5",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-refresh": "0.4.19",
+    "eslint-plugin-tailwindcss": "3.18.0",
     "jest": "^29.7.0",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.4",
-    "prettier": "^3.5.1",
+    "postcss-preset-env": "^10.1.5",
+    "prettier": "^3.5.3",
     "tailwindcss": "3.4.17",
-    "typescript": "^5.7.2",
+    "typescript": "^5.8.2",
     "vite": "5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
