--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.2",
     "@pack/hydrogen": "^1.0.8",
-    "@pack/react": "^2.1.4",
-    "@pack/types": "^0.0.2",
+    "@pack/react": "^2.1.5",
+    "@pack/types": "^0.0.3",
     "@remix-run/react": "^2.16.4",
     "@shopify/cli": "^3.77.1",
     "@shopify/cli-hydrogen": "9.0.8",
@@ -35,9 +35,11 @@
     "@shopify/remix-oxygen": "^2.0.12",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.2.4",
     "fast-xml-parser": "^4.5.0",
     "graphql": "^16.10.0",
     "hex-to-rgba": "^2.0.1",
+    "html-react-parser": "^5.1.8",
     "isbot": "^5.1.6",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.4.7",
@@ -62,6 +64,7 @@
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
     "@shopify/prettier-config": "^1.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
