feat: rich text section

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.12.5",
+  "version": "1.12.6",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -24,8 +24,8 @@
     "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.2",
     "@pack/hydrogen": "^1.0.8",
-    "@pack/react": "^2.1.4",
-    "@pack/types": "^0.0.2",
+    "@pack/react": "^2.1.5",
+    "@pack/types": "^0.0.3",
     "@remix-run/react": "^2.16.4",
     "@shopify/cli": "^3.77.1",
     "@shopify/cli-hydrogen": "9.0.8",
@@ -35,6 +35,7 @@
     "@shopify/remix-oxygen": "^2.0.12",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.2.4",
     "fast-xml-parser": "^4.5.0",
     "graphql": "^16.10.0",
     "hex-to-rgba": "^2.0.1",
