--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "cookie": "0.7.2",
     "eslint": "8.57.1",
     "eslint-plugin-hydrogen": "0.12.5",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "5.2.5",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-refresh": "0.4.19",
