--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@shopify/hydrogen-react": "^2025.1.3",
     "@shopify/mini-oxygen": "3.1.1",
     "@shopify/remix-oxygen": "^2.0.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.4",
@@ -41,6 +43,7 @@
     "hex-to-rgba": "^2.0.1",
     "isbot": "^5.1.6",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.501.0",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -51,6 +54,8 @@
     "schema-dts": "^1.1.5",
     "snakecase-keys": "^8.0.1",
     "swiper": "^11.2.6",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
     "uuid": "^11.1.0"
   },
