--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@pack/hydrogen": "^1.0.8",
     "@pack/react": "^2.1.5",
     "@pack/types": "^0.0.3",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@remix-run/react": "^2.16.4",
     "@shopify/cli": "^3.77.1",
     "@shopify/cli-hydrogen": "9.0.8",
