--- a/components.json
+++ b/components.json
@@ -7,8 +7,7 @@
     "config": "tailwind.config.js",
     "css": "app/styles/app.css",
     "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": ""
+    "cssVariables": true
   },
   "aliases": {
     "components": "~/components",
