--- a/package.json
+++ b/package.json
@@ -90,6 +90,9 @@
     "vite": "5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.40.0"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
