feat: marquee section

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
