--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@pack/types": "^0.0.3",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@remix-run/react": "^2.16.4",
     "@shopify/cli": "^3.77.1",
