--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@fingerprintjs/botd": "^1.9.1",
+    "@formspree/react": "^3.0.0",
     "@headlessui/react": "^2.2.0",
     "@headlessui/tailwindcss": "^0.2.2",
+    "@hookform/resolvers": "^5.0.1",
     "@pack/client": "^1.0.2",
     "@pack/hydrogen": "^1.0.8",
     "@pack/react": "^2.1.5",
     "@pack/types": "^0.0.3",
     "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.5",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.1",
     "@remix-run/react": "^2.16.4",
     "@shopify/cli": "^3.77.1",
     "@shopify/cli-hydrogen": "9.0.8",
@@ -54,6 +57,7 @@
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.2",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
@@ -64,7 +68,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
