--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
     "@shopify/prettier-config": "^1.1.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
