--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "@graphql-codegen/cli": "^5.0.5",
     "@remix-run/dev": "^2.16.5",
     "@remix-run/eslint-config": "^2.16.5",
+    "@remix-run/fs-routes": "^2.16.7",
     "@remix-run/node": "^2.16.5",
+    "@remix-run/route-config": "^2.16.7",
     "@shopify/eslint-plugin": "^48.0.2",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
