--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.13.0",
+  "version": "1.13.1",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -20,11 +20,11 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@fingerprintjs/botd": "^1.9.1",
-    "@headlessui/react": "^2.2.2",
+    "@headlessui/react": "^2.2.4",
     "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.2",
     "@pack/hydrogen": "^1.0.8",
-    "@pack/react": "^2.1.5",
+    "@pack/react": "^2.2.0",
     "@pack/types": "^0.0.3",
     "@remix-run/react": "^2.16.5",
     "@shopify/cli": "^3.78.1",
@@ -37,7 +37,7 @@
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "fast-xml-parser": "^4.5.0",
-    "graphql": "^16.10.0",
+    "graphql": "^16.11.0",
     "hex-to-rgba": "^2.0.1",
     "isbot": "^5.1.6",
     "lodash": "^4.17.21",
@@ -51,26 +51,29 @@
     "remark-gfm": "^4.0.1",
     "schema-dts": "^1.1.5",
     "snakecase-keys": "^8.0.1",
-    "swiper": "^11.2.6",
+    "swiper": "^11.2.7",
     "tiny-invariant": "^1.3.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/cli": "^5.0.6",
     "@remix-run/dev": "^2.16.5",
     "@remix-run/eslint-config": "^2.16.5",
+    "@remix-run/fs-routes": "^2.16.7",
     "@remix-run/node": "^2.16.5",
+    "@remix-run/route-config": "^2.16.7",
     "@shopify/eslint-plugin": "^48.0.2",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/oxygen-workers-types": "^4.1.6",
     "@shopify/prettier-config": "^1.1.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^8.4.10",
     "@types/grecaptcha": "^3.0.9",
     "@types/gtag.js": "^0.0.20",
-    "@types/lodash": "^4.17.16",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/lodash": "^4.17.17",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "0.7.2",
