--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@remix-run/react": "^2.16.4",
@@ -49,6 +49,7 @@
     "country-region-data": "^3.1.0",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.4",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "fast-xml-parser": "^4.5.0",
     "graphql": "^16.10.0",
