wip: update to support latest @pack/hydrogen + @pack/react

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@headlessui/react": "^2.2.4",
     "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.2",
-    "@pack/hydrogen": "^1.0.8",
-    "@pack/react": "^2.2.0-beta.2",
-    "@pack/types": "^0.0.3",
+    "@pack/hydrogen": "file:.yalc/@pack/hydrogen",
+    "@pack/react": "file:.yalc/@pack/react",
+    "@pack/types": "^0.0.4",
     "@remix-run/react": "^2.16.5",
     "@shopify/cli": "^3.78.1",
     "@shopify/cli-hydrogen": "9.0.8",
