test beta packages

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@headlessui/react": "^2.2.4",
     "@headlessui/tailwindcss": "^0.2.2",
     "@pack/client": "^1.0.2",
-    "@pack/hydrogen": "file:.yalc/@pack/hydrogen",
-    "@pack/react": "file:.yalc/@pack/react",
+    "@pack/hydrogen": "^1.0.8",
+    "@pack/react": "^2.2.0",
     "@pack/types": "^0.0.4",
     "@remix-run/react": "^2.16.5",
     "@shopify/cli": "^3.78.1",
