--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@remix-run/react": "^2.16.5",
     "@shopify/cli": "^3.78.1",
     "@shopify/cli-hydrogen": "9.0.8",
-    "@shopify/hydrogen": "^2025.1.3",
-    "@shopify/hydrogen-react": "^2025.1.3",
+    "@shopify/hydrogen": "2025.1.3",
+    "@shopify/hydrogen-react": "2025.1.3",
     "@shopify/mini-oxygen": "3.1.1",
     "@shopify/remix-oxygen": "^2.0.12",
     "clsx": "^2.1.1",
