--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydrogen-starter",
   "private": true,
   "sideEffects": false,
-  "version": "1.13.2",
+  "version": "1.13.3",
   "type": "module",
   "scripts": {
     "dev": "shopify hydrogen dev --port 8080",
@@ -29,8 +29,8 @@
     "@remix-run/react": "^2.16.5",
     "@shopify/cli": "^3.78.1",
     "@shopify/cli-hydrogen": "9.0.8",
-    "@shopify/hydrogen": "^2025.1.3",
-    "@shopify/hydrogen-react": "^2025.1.3",
+    "@shopify/hydrogen": "2025.1.3",
+    "@shopify/hydrogen-react": "2025.1.3",
     "@shopify/mini-oxygen": "3.1.1",
     "@shopify/remix-oxygen": "^2.0.12",
     "clsx": "^2.1.1",
@@ -60,7 +60,6 @@
     "@remix-run/dev": "^2.16.5",
     "@remix-run/eslint-config": "^2.16.5",
     "@remix-run/fs-routes": "^2.16.7",
-    "@remix-run/node": "^2.16.5",
     "@remix-run/route-config": "^2.16.7",
     "@shopify/eslint-plugin": "^48.0.2",
     "@shopify/hydrogen-codegen": "^0.3.2",
@@ -89,6 +88,7 @@
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^10.1.6",
     "prettier": "^3.5.3",
+    "set-cookie-parser": "^2.7.1",
     "tailwindcss": "3.4.17",
     "typescript": "^5.8.3",
     "vite": "5.4.11",
