--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
+    "sanitize-html": "^2.17.0",
     "schema-dts": "^1.1.5",
     "snakecase-keys": "^8.0.1",
     "swiper": "^11.2.7",
@@ -73,6 +74,7 @@
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
+    "@types/sanitize-html": "^2.16.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "5.62.0",
     "cookie": "0.7.2",
