--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "markdown-to-jsx": "^9.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-error-boundary": "^6.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-intersection-observer": "^10.0.0",
     "react-markdown": "^10.1.0",
